--- a/index.html
+++ b/index.html
@@ -1,12 +1,121 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Igor's Portfolio</title>
+  <title>Igor Makarov – Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: 2rem auto;
+      line-height: 1.6;
+      padding: 0 1rem;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 1rem;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 0.5rem;
+    }
+    a {
+      color: #0066cc;
+    }
+    hr {
+      margin: 2rem 0;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <p>This is my personal website hosted on GitHub Pages.</p>
+
+<h1>👋 Hi, I'm Igor Makarov</h1>
+
+<p>🎯 <strong>Experienced Operations Executive</strong> with a strong background in:</p>
+<ul>
+  <li>Production</li>
+  <li>Real Estate & Construction</li>
+  <li>Spatial Planning</li>
+  <li>Project Management</li>
+  <li>Development of Social Care Services</li>
+</ul>
+
+<hr>
+
+<h2>🔧 My Core Strengths</h2>
+<p>I specialize in creating, organizing, and managing processes — across both <strong>technical</strong> and <strong>legal</strong> dimensions.</p>
+<ul>
+  <li>Strong strategic mindset</li>
+  <li>Operational excellence in complex environments</li>
+  <li>Analytical and data-driven approach to decision-making</li>
+  <li>Adept at delivering results in dynamic sectors</li>
+</ul>
+
+<hr>
+
+<h2>📊 Passion for Data & Problem Solving</h2>
+<p>I’m passionate about solving complex business challenges using <strong>data analytics</strong>, and enjoy finding creative, out-of-the-box solutions that drive measurable results.</p>
+
+<p>My work combines real-world business strategy with data-driven tools to uncover insights and drive operational improvement.</p>
+
+<hr>
+
+<h2>🚀 Current Focus</h2>
+<ul>
+  <li>Real Estate projects, analytics and process optimization</li>
+  <li>Social Care service development projects</li>
+  <li>Freelancing work on operational and data projects</li>
+</ul>
+
+<hr>
+
+<h2>🌱 Learning Journey</h2>
+<ul>
+  <li><strong>Power BI</strong>, <strong>MySQL</strong>, <strong>Python</strong></li>
+  <li><strong>Advanced Deep Learning</strong> & AI-driven automation</li>
+  <li><strong>Strategic Planning for Data Projects</strong></li>
+</ul>
+
+<hr>
+
+<h2>📁 Featured Power BI Projects</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Project</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="https://github.com/IgorLT67/igor-portfolio/tree/main/social-care-model">👥 Social Care Business Model</a></td>
+      <td>End-to-end business development dashboard based on a real social services scenario. In progress — being expanded into a more complex, strategic tool.</td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/IgorLT67/igor-portfolio/tree/main/adventureworks-model">🏢 AdventureWorks Sales Analysis</a></td>
+      <td>Sales performance insights, KPIs, and revenue breakdowns using Microsoft’s public dataset.</td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/IgorLT67/igor-portfolio/tree/main/candy-sales-model">🍬 Candy Sales Tracker</a></td>
+      <td>Regional product performance with forecasting, market segmentation, and slicer-driven filtering.</td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/IgorLT67/igor-portfolio/tree/main/airport-delays-model">✈️ Airport Delays Analysis</a></td>
+      <td>Delay cause analysis with seasonal patterns and predictive models.</td>
+    </tr>
+  </tbody>
+</table>
+
+<hr>
+
+<h2>🔗 Let’s Connect</h2>
+<p>💼 <a href="https://www.linkedin.com/in/igormakarov-vilnius/" target="_blank">LinkedIn</a><br>
+📬 Always open to collaboration, freelance work, or strategic partnerships.</p>
+
 </body>
 </html>
